# CPP-Project-Template

./: .gitignore  CMakeLists.txt  README.md
Unit-Tests/: SimpleTest.cpp
include/: GetString.h
src/: main.cpp
